# rust-coreutils

./: Cargo.toml  LICENSE.txt  README.md  cat-test-file
cat/: Cargo.toml
cat/src/: args.rs  chunked.rs
cat/src/proc/: mod.rs  show_nonprinting.rs  squeeze_blank.rs
head/: Cargo.toml
head/src/: main.rs
lib/chunk_reader/: Cargo.toml
lib/chunk_reader/src/: lib.rs
lib/parse_num/: Cargo.toml
lib/parse_num/src/: lib.rs  num_value.rs  parse_num.rs
lib/wrapped_writer/: Cargo.toml
lib/wrapped_writer/src/: lib.rs
src/: args.rs  chunked.rs  main.rs
src/cat/: Cargo.toml
src/chunk_reader/src/: lib.rs
src/head/: Cargo.toml
src/head/src/: args.rs  head.rs  main.rs  parse_num.rs
src/head/src/head/: head_bytes.rs  head_lines.rs  head_negative_bytes.rs  head_negative_lines.rs  mod.rs
src/head/src/parse_num/: mod.rs  parse_num.rs  parse_num_error.rs
src/proc/: mod.rs  number_all.rs  number_nonblank.rs  prepend_linenum.rs  show_ends.rs  show_nonprinting.rs  show_tabs.rs  squeeze_blank.rs
utils/base32/: Cargo.toml  README.md
utils/base32/src/: alphabet.rs  args.rs  base32_error.rs  decode.rs  encode.rs  main.rs  proc.rs
utils/base64/: Cargo.toml
utils/base64/src/: args.rs  base64_error.rs  decode.rs  encode.rs  filtered_reader.rs  main.rs  proc.rs
utils/cat/: Cargo.toml
utils/cat/src/: main.rs
utils/head/: Cargo.toml
utils/head/src/: args.rs  main.rs
utils/head/src/head/: head_bytes.rs  head_error.rs  head_lines.rs  head_negative_bytes.rs  head_negative_lines.rs  mod.rs
utils/rev/: Cargo.toml
utils/rev/src/: main.rs
utils/tac/: Cargo.toml
utils/tac/src/: args.rs  entry.rs  main.rs  tac.rs  tac_error.rs
utils/tac/src/split/: mod.rs  split_regex.rs  split_str.rs
utils/tail/: Cargo.toml  README.md
utils/tail/src/: args.rs  follow.rs  main.rs
utils/tail/src/pid/: mod.rs  pid_unix.rs  pid_unknown.rs  pid_windows.rs
utils/tail/src/tail/: mod.rs  tail_bytes.rs  tail_error.rs  tail_lines.rs  tail_negative_bytes.rs  tail_negative_lines.rs
