[package]
name = "cat"
version = "0.1.0"
edition = "2021"
authors = ["Viacheslav Azarov"]
description = """
Concatenate FILE(s) to standard output.

With no FILE, or when FILE is -, read standard input.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
chunk_reader = { path = "../chunk_reader" }
