[package]
name = "base64"
version = "0.1.0"
edition = "2021"
description = """
Base64 encode or decode FILE, or standard input, to standard output.

With no FILE, or when FILE is -, read standard input.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
base64 = "0.21.0"
wrapped_writer = { path = "../../lib/wrapped_writer" }
