[package]
name = "rev"
version = "0.1.0"
edition = "2021"
description = """
The  rev  utility  copies  the  specified files to standard output, reversing the order of characters in every
line.  If no files are specified, standard input is read.
"""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
