[package]
name = "tail"
version = "0.1.0"
edition = "2021"
description = """
Print  the last 10 lines of each FILE to standard output.
With more than one FILE, precede each with a header giving the file name.

With no FILE, or when FILE is -, read standard input.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
futures = "0.3.28"
smol = "1.3.0"
ibig = "0.3.6"
notify = "5.1.0"
ctrlc = "3.2.5"
chunk_reader = { path = "../../lib/chunk_reader" }
parse_num = { path = "../../lib/parse_num" }

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.26.2"
